# bevy_persist

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PRODUCTION.md  README.md
.github/: CONTRIBUTING.md  PUBLISHING.md  dependabot.yml
.github/workflows/: check-msrv.yml  ci.yml  coverage.yml  release.yml
bevy_persist/: Cargo.toml  README.md  game_settings.ron
bevy_persist/examples/: README.md  advanced.rs  basic.rs
bevy_persist/src/: lib.rs
bevy_persist/tests/: integration_test.rs
bevy_persist_derive/: Cargo.toml  README.md
bevy_persist_derive/src/: lib.rs
