[package]
name = "bevy_persist_derive"
version = "0.1.0"
edition = "2021"
authors = ["Alex Gilbert"]
description = "Derive macro for bevy_persist"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alex-Gilbert/bevy_persist"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }